# qI2Pd

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  version.h
src/core/: Identity.cpp  Identity.h
src/crypto/: ElGamal.h
src/net/: NTCPSession.h
